Add date to types.
