# models/security/insecure.go
@@ -1,0 +1,7 @@
+package security
+
+import "github.com/goolanger/swaggerize/models/swagger"
+
+func None() swagger.Security {
+	return nil
+}
