# test/swagger.yaml
@@ -1,3 +1,5 @@
+# Code generated by swaggerize; DO NOT EDIT.
+
 basePath: /v2
 definitions:
   ApiResponse:
@@ -83,8 +85,8 @@ info:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   contact:
-    name: amaury95
-    url: amaury95.github.io
+    name: goolanger
+    url: https://github.com/goolanger
     email: amauryuh@gmail.com
   description: 'This is a sample server Petstore server.  You can find out more about
     Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For
@@ -117,6 +119,7 @@ paths:
           description: pet not found
           schema:
             type: string
+      security: []
       tags:
       - pet
     get:
@@ -142,6 +145,8 @@ paths:
           description: pet not found
           schema:
             type: string
+      security:
+      - bearer: []
       tags:
       - pet
     post:
@@ -173,6 +178,8 @@ paths:
           description: pet not found
           schema:
             type: string
+      security:
+      - bearer: []
       tags:
       - pet
   /pet/{petId}/uploadImage:
@@ -200,11 +207,18 @@ paths:
           description: successful operation
           schema:
             $ref: '#/definitions/ApiResponse'
+      security:
+      - bearer: []
       tags:
       - pet
 schemes:
 - https
 - http
+securityDefinitions:
+  bearer:
+    in: header
+    name: bearer
+    type: apiKey
 swagger: "2.0"
 tags:
 - name: pet
